# proxycraft

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini
.github/actions/test/: action.yml
.github/workflows/: test-latest-release-install.yml  test-local-install.yml  test.yml
dockerfiles/: pyprox.Dockerfile
examples/command/: main.py  proxy.json
examples/http_server/: main.py  proxy.json
proxycraft/: default.json  logger.py  proxycraft.py
proxycraft/config/: models.py
proxycraft/files/reader/: io_async_reader.py
proxycraft/middlewares/: content_length_middleware.py
proxycraft/middlewares/performance/: circuit_breaker.py  compression.py
proxycraft/middlewares/performance/caching/: in_file.py  in_memory.py
proxycraft/middlewares/security/: ip_filter.py
proxycraft/middlewares/transformer/: response_transform.py
proxycraft/networking/connection_pooling/: connection_pooling.py  http_client.py  http_constants.py
proxycraft/networking/connection_pooling/connectors/: connector_sage_singleton.py  event_loop_connector_manager.py  thread_local_connector.py
proxycraft/networking/connection_pooling/tracing/: default_trace_handler.py
proxycraft/networking/routing/: routing_selector.py
proxycraft/protocols/: https_aiohttp.py  https_curl_cffi.py  websocket.py
proxycraft/security/authentication/: basic_auth.py  jwt_auth.py
proxycraft/upstreams/backends/file_system/: file.py
proxycraft/upstreams/backends/http/: echo.py  https.py  mock.py
proxycraft/upstreams/backends/system/: command.py
pyprox/: __init__.py  default.json  pyprox.py
pyprox/config/: loader.py  models.py
pyprox/middlewares/: content_length_middleware.py
pyprox/middlewares/performance/: circuit_breaker.py  compression.py  resource_filter.py
pyprox/middlewares/performance/caching/: in_file.py  in_memory.py
pyprox/middlewares/security/: bot_filter.py  ip_filter.py
pyprox/middlewares/transformer/: request_transform.py  response_transform.py
pyprox/networking/connection_pooling/: connection_pooling.py  http_client.py
pyprox/networking/connection_pooling/connectors/: connector_sage_singleton.py  context_connector.py
pyprox/networking/connection_pooling/tracing/: default_trace_handler.py
pyprox/networking/routing/: routing_selector.py
pyprox/protocols/: socks.py  tcp.py  tls.py  udp.py
pyprox/security/authentication/: auth.py  basic_auth.py  jwt_auth.py
pyprox/upstreams/backends/file_system/: file.py
pyprox/upstreams/backends/http/: echo.py  https.py  mock.py  redirect.py
pyprox/upstreams/backends/system/: command.py  scheduler.py
pyprox/utils/: utils.py
scripts/: version.sh
tests/: conftest.py  logger.py
tests/e2e-tests/: test_https_request_chunked.py  test_https_request_gunicorn.py  test_https_request_local.py  test_https_request_uvicorn.py  test_idum_proxy_protocols.py  test_proxycraft_protocols.py
tests/unit-tests/: test_connection_pooling.py  test_file_config.py  test_idum_proxy.py  test_idum_proxy_config.py  test_keepalive.py  test_logger.py  test_proxycraft.py  test_pyprox.py  test_routing_selector.py
tests/unit-tests/config/: test_models.py
tests/unit-tests/files/reader/: test_io_async_reader.py
tests/unit-tests/middlewares/security/: test_bot_filter_middleware.py  test_ip_filter_middleware.py
tests/unit-tests/networking/connection_pooling/: test_http_client.py  test_http_client_simple.py
tests/unit-tests/utils/: test_utils.py
